[project]
name = "catnip-on-dandi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dandi>=0.74.0",
    "fsspec>=2025.12.0",
    "jupyter>=1.1.1",
    "k3d>=2.17.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "tifffile>=2025.12.20",
]
